MDEV-21914 JSON_ARRAYAGG doesn't reject ORDER BY clause, but doesn't work either.

ORDER BY fixed for JSON_ARRAYAGG.